[package]
name = "shadow-tests"
version = "2.5.0"
edition = "2021"
publish = false

[lib]
name = "test_utils"
path = "test_utils.rs"

[[bin]]
name = "test_epoll"
path = "epoll/test_epoll.rs"

[[bin]]
name = "test_exit"
path = "exit/test_exit.rs"

[[bin]]
name = "test_sched_affinity"
path = "sched_affinity/test_sched_affinity.rs"

[[bin]]
name = "test_sleep"
path = "sleep/test_sleep.rs"
#harness = false

[[bin]]
name = "test_socket"
path = "socket/socket/test_socket.rs"

[[bin]]
name = "test_bind"
path = "socket/bind/test_bind.rs"

[[bin]]
name = "test_bind_in_new_process"
path = "socket/bind/test_bind_in_new_process.rs"

[[bin]]
name = "test_listen"
path = "socket/listen/test_listen.rs"

[[bin]]
name = "test_getsockname"
path = "socket/getsockname/test_getsockname.rs"

[[bin]]
name = "test_accept"
path = "socket/accept/test_accept.rs"

[[bin]]
name = "test_connect"
path = "socket/connect/test_connect.rs"

[[bin]]
name = "test_getpeername"
path = "socket/getpeername/test_getpeername.rs"

[[bin]]
name = "test_socketpair"
path = "socket/socketpair/test_socketpair.rs"

[[bin]]
name = "test_shutdown"
path = "socket/shutdown/test_shutdown.rs"

[[bin]]
name = "test_send_recv"
path = "socket/send_recv/test_send_recv.rs"

[[bin]]
name = "test_sockopt"
path = "socket/sockopt/test_sockopt.rs"

[[bin]]
name = "test_ioctl"
path = "socket/ioctl/test_ioctl.rs"

[[bin]]
name = "test_random"
path = "random/test_random.rs"

[[bin]]
name = "test_pid_assignment"
path = "unistd/test_pid_assignment.rs"

[[bin]]
name = "test_unistd"
path = "unistd/test_unistd.rs"

[[bin]]
name = "test_poll"
path = "poll/test_poll.rs"

[[bin]]
name = "test_mmap"
path = "memory/test_mmap.rs"

[[bin]]
name = "test_unaligned"
path = "memory/test_unaligned.rs"

[[bin]]
name = "test_eventfd"
path = "eventfd/test_eventfd.rs"

[[bin]]
name = "test_pipe"
path = "pipe/test_pipe.rs"

[[bin]]
name = "test_pthreads"
path = "threads/test_pthreads.rs"

[[bin]]
name = "test_threads_noexit"
path = "threads/test_threads_noexit.rs"

[[bin]]
name = "test_threads_group_leader_exits"
path = "threads/test_threads_group_leader_exits.rs"

[[bin]]
name = "test_ifaddrs"
path = "ifaddrs/test_ifaddrs.rs"

[[bin]]
name = "test_env"
path = "environment/test_env.rs"

[[bin]]
name = "test_signal_resched"
path = "regression/test_signal_resched.rs"

[[bin]]
name = "test_exit_after_signal_sched"
path = "regression/test_exit_after_signal_sched.rs"

[[bin]]
name = "test_dup"
path = "dup/test_dup.rs"

[[bin]]
name = "test_signals"
path = "signal/test_signals.rs"

[[bin]]
name = "test_select"
path = "select/test_select.rs"

[[bin]]
name = "test_sysinfo"
path = "sysinfo/test_sysinfo.rs"

[[bin]]
name = "test_busy_wait"
path = "regression/test_busy_wait.rs"

[[bin]]
name = "test_itimer"
path = "itimer/test_itimer.rs"

[[bin]]
name = "test_itimer_scheduled_after_exit"
path = "itimer/test_itimer_scheduled_after_exit.rs"

[[bin]]
name = "test_stdio"
path = "stdio/test_stdio.rs"

[dependencies]
anyhow = { version = "1.0.69", features = ["backtrace"] }
libc = "0.2"
nix = "0.26.2"
rand = { version="0.8.5", features=["small_rng"] }
signal-hook = "0.3.15"
once_cell = "1.17.1"
