[package]
name = "shadow-tests"
edition.workspace = true
publish.workspace = true

[features]
extra_tests = []

[lib]
name = "test_utils"
path = "test_utils.rs"

[[bin]]
name = "test_clone"
path = "clone/test_clone.rs"

[[bin]]
name = "test_capget"
path = "capabilities/test_capget.rs"

[[bin]]
name = "test_capset"
path = "capabilities/test_capset.rs"

[[bin]]
name = "test_fork"
path = "clone/test_fork.rs"

[[bin]]
name = "test_epoll"
path = "epoll/test_epoll.rs"

[[bin]]
name = "test_epoll_edge"
path = "epoll/test_epoll_edge.rs"

[[bin]]
name = "test_exit"
path = "exit/test_exit.rs"

[[bin]]
name = "test_sched_affinity"
path = "sched_affinity/test_sched_affinity.rs"

[[bin]]
name = "test_sleep"
path = "sleep/test_sleep.rs"

[[bin]]
name = "test_socket"
path = "socket/socket/test_socket.rs"

[[bin]]
name = "test_bind"
path = "socket/bind/test_bind.rs"

[[bin]]
name = "test_bind_in_new_process"
path = "socket/bind/test_bind_in_new_process.rs"

[[bin]]
name = "test_listen"
path = "socket/listen/test_listen.rs"

[[bin]]
name = "test_getsockname"
path = "socket/getsockname/test_getsockname.rs"

[[bin]]
name = "test_accept"
path = "socket/accept/test_accept.rs"

[[bin]]
name = "test_connect"
path = "socket/connect/test_connect.rs"

[[bin]]
name = "test_getpeername"
path = "socket/getpeername/test_getpeername.rs"

[[bin]]
name = "test_socketpair"
path = "socket/socketpair/test_socketpair.rs"

[[bin]]
name = "test_shutdown"
path = "socket/shutdown/test_shutdown.rs"

[[bin]]
name = "test_send_recv"
path = "socket/send_recv/test_send_recv.rs"

[[bin]]
name = "test_sockopt"
path = "socket/sockopt/test_sockopt.rs"

[[bin]]
name = "test_ioctl"
path = "socket/ioctl/test_ioctl.rs"

[[bin]]
name = "test_netlink_bind"
path = "netlink/socket/bind/test_bind.rs"

[[bin]]
name = "test_random"
path = "random/test_random.rs"

[[bin]]
name = "test_unistd"
path = "unistd/test_unistd.rs"

[[bin]]
name = "test_poll"
path = "poll/test_poll.rs"

[[bin]]
name = "test_mmap"
path = "memory/test_mmap.rs"

[[bin]]
name = "test_unaligned"
path = "memory/test_unaligned.rs"

[[bin]]
name = "test_eventfd"
path = "eventfd/test_eventfd.rs"

[[bin]]
name = "test_pipe"
path = "pipe/test_pipe.rs"

[[bin]]
name = "test_pthreads"
path = "threads/test_pthreads.rs"

[[bin]]
name = "test_threads_noexit"
path = "threads/test_threads_noexit.rs"

[[bin]]
name = "test_threads_group_leader_exits"
path = "threads/test_threads_group_leader_exits.rs"

[[bin]]
name = "test_ifaddrs"
path = "ifaddrs/test_ifaddrs.rs"

[[bin]]
name = "test_env"
path = "environment/test_env.rs"

[[bin]]
name = "test_signal_resched"
path = "regression/test_signal_resched.rs"

[[bin]]
name = "test_exit_after_signal_sched"
path = "regression/test_exit_after_signal_sched.rs"

[[bin]]
name = "test_netlink_send_limit"
path = "netlink/test_send_limit.rs"

[[bin]]
name = "test_dup"
path = "dup/test_dup.rs"

[[bin]]
name = "test_signals"
path = "signal/test_signals.rs"

[[bin]]
name = "test_select"
path = "select/test_select.rs"

[[bin]]
name = "test_sysinfo"
path = "sysinfo/test_sysinfo.rs"

[[bin]]
name = "test_busy_wait"
path = "regression/test_busy_wait.rs"

[[bin]]
name = "test_itimer"
path = "time/itimer/test_itimer.rs"

[[bin]]
name = "test_itimer_scheduled_after_exit"
path = "time/itimer/test_itimer_scheduled_after_exit.rs"

[[bin]]
name = "test_stdio"
path = "stdio/test_stdio.rs"

[[bin]]
name = "test_time"
path = "time/time/test_time.rs"

[[bin]]
name = "test_clock_getres"
path = "time/clock_getres/test_clock_getres.rs"

[[bin]]
name = "test_clock_gettime"
path = "time/clock_gettime/test_clock_gettime.rs"

[[bin]]
name = "test_clock_nanosleep"
path = "time/clock_nanosleep/test_clock_nanosleep.rs"

[[bin]]
name = "test_nanosleep"
path = "time/nanosleep/test_nanosleep.rs"

[[bin]]
name = "test_prctl"
path = "prctl/test_prctl.rs"

[[bin]]
name = "test_stat"
path = "stat/test_stat.rs"

[[bin]]
name = "test_close_range"
path = "close_range/test_close_range.rs"

[dependencies]
anyhow = "1.0.86"
formatting-nostd = { path = "../lib/formatting-nostd" }
libc = "0.2"
linux-api = { path = "../lib/linux-api", features = ["rustix", "std", "libc"] }
neli = "0.6.4"
nix = { version = "0.26.4", features = ["event", "feature", "fs", "poll", "process", "sched", "signal", "socket", "uio"] }
rand = { version = "0.8.5", features = ["small_rng"] }
rustix = { version = "0.38.34", default-features = false, features = ["fs", "mm", "pipe", "time", "thread"] }
signal-hook = "0.3.17"
once_cell = "1.19.0"
vasi-sync = { path = "../lib/vasi-sync" }
static_assertions = "1.1.0"
