[package]
name = "linux-api"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
std = []
rustix = ["dep:rustix"]
c_bindings = ["dep:shadow-build-common", "dep:cbindgen"]

[dependencies]
bitflags = "2.5.0"
log = { version = "0.4.20", default-features = false }
shadow-pod = { path = "../pod" }
static_assertions = "1.1.0"
vasi = { path = "../vasi" }
num_enum = { version = "0.7.1", default-features = false }
memoffset = "0.9.0"
bytemuck = "1.16.0"
linux-syscall = "1.0.0"
linux-errno = "1.0.1"
naked-function = "0.1.5"
linux-raw-sys = "0.6.3"
rustix = { optional = true, version = "0.38.28", default-features = false, features = ["process"] }

[dev-dependencies]
rustix = { version = "0.38.28", default-features=false, features = ["thread", "process", "time"] }

[build-dependencies]
shadow-build-common = { optional = true, path = "../shadow-build-common", features = ["cbindgen"] }
cbindgen = { optional = true, version = "0.26.0", default-features = false }
