[package]
name = "linux-kernel-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = { version = "0.6.1", default-features=false }
vasi = { path = "../vasi" }

[build-dependencies]
bindgen = { version = "0.65.1" }
