[package]
name = "linux-kernel-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = { version = "0.6.1", default-features=false }
vasi = { path = "../vasi" }

[build-dependencies]
shadow-build-common = { path = "../shadow-build-common" }
bindgen = { version = "0.65.1" }
cbindgen = { version = "0.24.3" }