[package]
name = "log-c2rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
formatting-nostd = { path = "../formatting-nostd" }
# don't log debug or trace levels in release mode
log = { version = "0.4", features = ["release_max_level_debug"] }
num_enum = { version = "0.7.0", default-features=false }
logger = { path = "../logger" }
va_list = { version = "0.1.4", default-features = false }

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
shadow-build-common = { path = "../shadow-build-common" }
cbindgen = { version = "0.26.0", default_features = false }
