[package]
name = "log-c2rust"
edition.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
formatting-nostd = { path = "../formatting-nostd" }
# don't log debug or trace levels in release mode
log = { version = "0.4", features = ["release_max_level_debug"] }
num_enum = { version = "0.7.3", default-features=false }
logger = { path = "../logger" }
va_list = { version = "0.2.0", default-features = false }

[build-dependencies]
cc = { version = "1.1", features = ["parallel"] }
shadow-build-common = { path = "../shadow-build-common", features = ["cbindgen"] }
cbindgen = { version = "0.27.0", default-features = false }
